test/users/weili/raiseType3-blc.chpl
proc raiseType(type t:int) { return real; }
//proc raiseType(type t:bool) { return int; }
var h1:raiseType(int).type;
